# apma2070

./: README.md  colab.ipynb  debug_nan_source.py  debug_pinn_plot.py  pyproject.toml
models/: model.weights.h5
ref_results/: convergence.json
results/: reference_convergence.json
results/compare/ic_gaussian/alpha_0p1/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_gaussian/alpha_0p25/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_gaussian/alpha_0p5/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_gaussian/alpha_0p75/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_gaussian/alpha_0p9/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_sine/alpha_0p1/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_sine/alpha_0p25/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_sine/alpha_0p5/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_sine/alpha_0p75/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results/compare/ic_sine/alpha_0p9/nu_0p1/N_512/: pinn_vs_spectral_metrics.json
results_pinn/: report.json
scripts/: compare_methods.py  plot_diffusion_dispersion.py  plot_reference.py  reference_convergence.py  solve.py  train_pinn.py
src/fracburgers/: __init__.py  cole_hopf.py  grid.py  initial_conditions.py  interpolation.py  operators.py  pinn.py  references.py  result_naming.py  solution.py  spectral.py  viz.py
tests/: test_cole_hopf.py  test_interpolation.py  test_operators.py  test_references.py  test_solution.py
(+24 files in other folders)
