[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fracburgers"
version = "0.1.0"
description = "Spectral and PINN solvers for the fractional nonlinear Burgers equation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Will Asness" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tensorflow>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fracburgers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
